gccida/c3/_cpp_create_definition
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1780:29: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
int  cpp_create_definition( cpp_reader_0 *pfile, cpp_hashnode_0 *node) 
                            ^~~~~~~~~~~~
                            cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1780:50: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
int  cpp_create_definition( cpp_reader_0 *pfile, cpp_hashnode_0 *node) 
                                                 ^~~~~~~~~~~~~~
                                                 cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1785:7: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
const cpp_token_0 *ctoken; // [rsp+10h] [rbp-30h] 
      ^~~~~~~~~~~
      cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1786:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *saved_cur_token; // [rsp+18h] [rbp-28h] 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1787:1: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
cpp_token_0 *token; // [rsp+20h] [rbp-20h] 
^~~~~~~~~~~
cpp_token
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1806:42: error: expected expression
ok = parse_params( pfile, ( cpp_macro_0 *)macro); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1806:29: error: use of undeclared identifier 'cpp_macro_0'
ok = parse_params( pfile, ( cpp_macro_0 *)macro); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1816:54: error: expected expression
token = alloc_expansion_token( pfile, ( cpp_macro_0 *)macro); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1816:41: error: use of undeclared identifier 'cpp_macro_0'
token = alloc_expansion_token( pfile, ( cpp_macro_0 *)macro); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1822:52: error: expected expression
token = lex_expansion_token( pfile, ( cpp_macro_0 *)macro); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1822:39: error: use of undeclared identifier 'cpp_macro_0'
token = lex_expansion_token( pfile, ( cpp_macro_0 *)macro); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1850:52: error: expected expression
token = lex_expansion_token( pfile, ( cpp_macro_0 *)macro); 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1850:39: error: use of undeclared identifier 'cpp_macro_0'
token = lex_expansion_token( pfile, ( cpp_macro_0 *)macro); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1867:24: error: expected expression
&& *( cpp_hashnode_0 **)( *( ( _QWORD *)macro + 1) + 8LL) == node ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1867:7: error: use of undeclared identifier 'cpp_hashnode_0'
&& *( cpp_hashnode_0 **)( *( ( _QWORD *)macro + 1) + 8LL) == node ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1874:42: error: unknown type name 'cpp_macro_0'; did you mean 'cpp_macro'?
if ( warn_of_redefinition( node, ( const cpp_macro_0 *)macro) ) 
                                         ^~~~~~~~~~~
                                         cpp_macro
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cpplib.h:43:26: note: 'cpp_macro' declared here
typedef struct cpp_macro cpp_macro;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1883:36: error: expected expression
node->value.macro = ( cpp_macro_0 *)macro; 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1883:23: error: use of undeclared identifier 'cpp_macro_0'
node->value.macro = ( cpp_macro_0 *)macro; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/cppmacro.c:1884:7: error: use of undeclared identifier 'QGenericArgument'
if ( !QGenericArgument::QGenericArgument( node->ident.str, "__STDC_", 7uLL) ) 
      ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/_cpp_create_definition/src/obj/cppmacro.o] Error 1
